--- a/index.html
+++ b/index.html
@@ -2,21 +2,98 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="right">
-    <nav class="navbar navbar-fixed-bottom right">
-        <ul class="list-group right">
-            <li class="right">
-                <button class="active right">登录</button>
-            </li>
-            <li class="right">
-                <button class="active right">注册</button>
+<!--<header class="dropdown">-->
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+        </a>
+    </div>
+
+    <div>
+
+
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">iOS</a></li>
+            <li><a href="#">SVN</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    Java
+                    <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="#"><s>御灵录图鉴</s></a></li>
+                    <li><a href="#">抽奖</a></li>
+                    <li><a href="#">Jasper Report</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">分离的链接</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">另一个分离的链接</a></li>
+                </ul>
             </li>
         </ul>
-    </nav>
-</div>
+    </div>
+</nav>
+<!--<div class="dropdown">-->
+<!--<nav class="navbar navbar-default" role="navigation">-->
+    <!--<ul>-->
+        <!--<li class="dropdown">-->
+            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                <!--Java-->
+                <!--<b class="caret"></b>-->
+            <!--</a>-->
+            <!--<ul class="dropdown-menu">-->
+                <!--<li><a href="#">jmeter</a></li>-->
+                <!--<li><a href="#">EJB</a></li>-->
+                <!--<li><a href="#">Jasper Report</a></li>-->
+                <!--<li class="divider"></li>-->
+                <!--<li><a href="#">分离的链接</a></li>-->
+                <!--<li class="divider"></li>-->
+                <!--<li><a href="#">另一个分离的链接</a></li>-->
+            <!--</ul>-->
+        <!--</li>-->
+    <!--</ul>-->
+<!--</nav>-->
+<!--<li class="dropdown">-->
+    <!--<a data-toggle="dropdown" href="#" class="dropdown-toggle">下拉菜单（Dropdown）触发器</a>-->
+    <!--<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">-->
+        <!--<li>-->
+            <!--<a href="http://baike.baidu.com/link?url=nzQl6x5w648g0JikoX2bEWGkRiuVRh1zqqOa5zMdKtJ-1vnhWM7YcW9HTbiNralXwjGw6jh4jttQAJTt8P6YYK">-->
+                <!--<img src="image/mainpage.png"/>-->
+            <!--</a>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<button>-->
+                <!--1-->
+            <!--</button>-->
+        <!--</li>-->
+    <!--</ul>-->
+<!--</li>-->
+<!--</div>-->
+<!--</header>-->
+<!--<div class="right">-->
+<!--<nav class="navbar navbar-fixed-top right">-->
+<!--<ul class="list-group ">-->
+<!--<li>-->
+<!--<a href="http://baike.baidu.com/link?url=nzQl6x5w648g0JikoX2bEWGkRiuVRh1zqqOa5zMdKtJ-1vnhWM7YcW9HTbiNralXwjGw6jh4jttQAJTt8P6YYK">-->
+<!--<img src="image/mainpage.png" style="width: 100px;height: auto;"/>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li>-->
+<!--<button class="active right">登录</button>-->
+<!--</li>-->
+<!--<li>-->
+<!--<button class="active right">注册</button>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</nav>-->
+<!--</div>-->
+<script src="js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
+
